--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,7 +21,7 @@ html:not(.dark) {
 }
 
 /* Remove backticks around inline code */
-.prose :where(code):not(:where([class~=not-prose],[class~=not-prose] *))::before,
-.prose :where(code):not(:where([class~=not-prose],[class~=not-prose] *))::after {
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before,
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
   content: "";
 }
