Add 'Read more' below recent articles on homepage

--- a/layouts/partials/recent-articles.html
+++ b/layouts/partials/recent-articles.html
@@ -4,3 +4,10 @@
     {{ partial "article-link.html" . }}
   {{ end }}
 {{ end }}
+<article class="mt-6 flex max-w-prose flex-row">
+  <div class="flex-none pe-4 sm:pe-6 ">
+    <h3 class="flex items-center text-xl font-semibold">
+      <a class="text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral" href="/blog/">Read more</a>
+    </h3>
+  </div>
+</article>
