A11y: don't open external links in new tab

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,2 @@
 <meta name="fediverse:creator" content="@hugovk@mastodon.social" />
+<script defer language="javascript" type="text/javascript"  src="{{ "/js/script.js" | urlize | relURL }}"></script>
