Allow long links to wrap instead of adding horizontal scroll to mobile
https://www.w3.org/WAI/WCAG21/Techniques/css/C33

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,6 +28,11 @@ html:not(.dark) {
   }
 }
 
+a {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 /* Remove quotes around blockquotes -- doesn't work for multiple paragraphs */
 .prose
   :where(blockquote p:first-of-type):not(
